Fix so that no horizontal scroll on testimonials

--- a/styles.css
+++ b/styles.css
@@ -1977,6 +1977,7 @@ body {
     width: 100%;
     height: 30rem;
     overflow-y: auto;
+    overflow-x: hidden;
     color: var(--clr-primary-200);
     font-weight: var(--fw-light);
     background-color: var(--clr-primary-40);
